--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="bd-footer bg-light text-custom py-5">
+    <div class="bd-footer bg-light text-custom pt-5">
         <!-- bg-light -->
         <div class="container py-5">
             <div class="row">
@@ -10,7 +10,7 @@
                             aria-label="Bootstrap">
                             <img src="assets/logo/allent_logo_without_text.png" height="32"
                                 class="d-inline-block align-text-top me-2">
-                            <h3 class=" text-custom">Allent Plastik Kalıp </h3>
+                            <h3 class=" text-custom">Allent Plastik </h3>
                             <!-- San. ve Tic. Ltd. Şti. -->
                         </a>
                         <li class="mb-2 text-muted">
@@ -32,7 +32,7 @@
                         </li>
                     </ul>
                 </div> -->
-                <div class="col-12 offset-md-2 col-lg-2 mb-3">
+                <div class="col-12 offset-lg-2 col-lg-2 mb-3">
                     <h3>{{getTranslate("social")}}</h3>
                     <ul class="list-unstyled">
                         <li class="mb-2">
@@ -61,7 +61,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 offset-md-2 mb-3">
+                <div class="col-12 col-lg-3 offset-lg-2 mb-3">
                     <h3>{{getTranslate("contact")}}</h3>
                     <ul class="list-unstyled">
                         <li class="mb-2">
