--- a/src/app/components/navi/navi.component.css
+++ b/src/app/components/navi/navi.component.css
@@ -25,11 +25,11 @@ ul.friend-list {
 }
 
 .fa.fa-facebook {
-  color: #4867AA;
+  color: #4867aa;
 }
 
 .fa.fa-linkedin {
-  color: #0A66C2;
+  color: #0a66c2;
 }
 
 .fa.fa-instagram {
@@ -58,7 +58,9 @@ ul.friend-list {
     color: rgb(4, 37, 74);
 } */
 
-ul.friend-list li {
+/* LG */
+
+ul.friend-list li.lg {
   list-style-type: none;
   display: flex;
   align-items: center;
@@ -71,18 +73,70 @@ ul.friend-list li:hover {
   cursor: pointer;
 }
 
-ul.friend-list .left i {
+ul.friend-list .left i.lg {
   margin-right: 20px;
 }
 
-ul.friend-list .right h3 {
+ul.friend-list .right h3.lg {
   font-size: 12px;
   font-weight: 700;
   margin-bottom: 0;
 }
 
-ul.friend-list .right p {
+ul.friend-list .right p.lg {
   font-size: 11px;
   color: black;
   margin: 0;
 }
+
+/* SM */
+
+ul.friend-list li.sm {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  transition: 0.3s;
+}
+
+ul.friend-list li:hover {
+  background: var(--app-navi-profile-hover-color);
+  cursor: pointer;
+}
+
+ul.friend-list .left i.sm {
+  margin-right: 0.5rem;
+}
+
+ul.friend-list .right h3.sm {
+  font-size: 12px;
+  margin-bottom: 0;
+}
+
+ul.friend-list .right p.sm {
+  font-size: 12px;
+  color: black;
+  margin-bottom: 0;
+}
+
+/* Offcanvas */
+
+@media (max-width: 991.98px) {
+  .offcanvas-collapse {
+    position: fixed;
+    top: 67.5px; 
+    bottom: 0;
+    left: 100%;
+    width: 100%;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    overflow-x: auto;
+    visibility: hidden;
+    background-color: #eeeeee;
+    transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  }
+  .offcanvas-collapse.open {
+    visibility: visible;
+    transform: translateX(-100%);
+  }
+}
+
