--- a/src/app/components/references/references.component.html
+++ b/src/app/components/references/references.component.html
@@ -1,19 +1,41 @@
-<div class="container mt-5 w-100">
+<div class="container mt-5 mb-5 w-100">
     <h1 class="display-4">{{getTranslate('references')}}</h1>
     <hr class="">
 
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-            <img src="assets/images/onur-plas.jpg" class="img" alt="...">
+    <!-- LG -->
+    <div class="d-none d-lg-block">
+        <div class="row row-cols-md-4 g-4 mt-2">
+            <div class="col">
+                <img src="assets/images/onur-plas.jpg" class="img" alt="...">
+            </div>
+            <div class="col">
+                <img src="assets/images/aytokfiltre.png" class="img" alt="...">
+            </div>
+            <div class="col">
+                <img src="assets/images/hidromet.png" class="img" alt="...">
+            </div>
+            <div class="col">
+                <img src="assets/images/onur-plas.jpg" class="img" alt="...">
+            </div>
         </div>
-        <div class="col">
-            <img src="assets/images/aytokfiltre.png" class="img" alt="...">
-        </div>
-        <div class="col">
-            <img src="assets/images/hidromet.png" class="img" alt="...">
-        </div>
-        <div class="col">
-            <img src="assets/images/onur-plas.jpg" class="img" alt="...">
+    </div>
+
+
+    <!-- SM -->
+    <div class="d-lg-none">
+        <div class="row row-cols-sm-1 g-4 text-center mb-5">
+            <div class="col-12">
+                <img src="assets/images/onur-plas.jpg" class="img w-100" alt="...">
+            </div>
+            <div class="col-12">
+                <img src="assets/images/aytokfiltre.png" class="img w-100" alt="...">
+            </div>
+            <div class="col-12">
+                <img src="assets/images/hidromet.png" class="img w-100" alt="...">
+            </div>
+            <div class="col-12">
+                <img src="assets/images/onur-plas.jpg" class="img w-100" alt="...">
+            </div>
         </div>
     </div>
 </div>
