--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,8 +5,8 @@
     <div class="row row-cols-1">
 
         <!-- Address -->
-        <div class="col-12">
-            <div class="row g-3">
+        <div class="col-12 mb-3">
+            <div class="row g-0">
                 <div class="col-sm-2">
                     <h6>{{getTranslate('address')}}</h6>
                 </div>
@@ -17,8 +17,8 @@
         </div>
 
         <!-- Phone -->
-        <div class="col-12">
-            <div class="row g-3">
+        <div class="col-12 mb-3">
+            <div class="row g-0">
                 <div class="col-sm-2">
                     <h6>{{getTranslate('phone')}}</h6>
                 </div>
@@ -29,8 +29,8 @@
         </div>
 
         <!-- GSM -->
-        <div class="col-12">
-            <div class="row g-3">
+        <div class="col-12 mb-3">
+            <div class="row g-0">
                 <div class="col-sm-2">
                     <h6>{{getTranslate('gsm')}}</h6>
                 </div>
@@ -41,8 +41,8 @@
         </div>
 
         <!-- Email 1 -->
-        <div class="col-12">
-            <div class="row g-3">
+        <div class="col-12 mb-3">
+            <div class="row g-0">
                 <div class="col-sm-2">
                     <h6>{{getTranslate('email')}} 1</h6>
                 </div>
@@ -53,8 +53,8 @@
         </div>
 
         <!-- Email 2 -->
-        <div class="col-12">
-            <div class="row g-3">
+        <div class="col-12 mb-3">
+            <div class="row g-0">
                 <div class="col-sm-2">
                     <h6>{{getTranslate('email')}} 2</h6>
                 </div>
@@ -65,8 +65,8 @@
         </div>
 
         <!-- GPS Location -->
-        <div class="col-12">
-            <div class="row g-3">
+        <div class="col-12 mb-3">
+            <div class="row g-0">
                 <div class="col-sm-2">
                     <h6>{{getTranslate('location')}}</h6>
                 </div>
